--- a/style.css
+++ b/style.css
@@ -85,3 +85,7 @@ div.questions a.btn{
   padding: 18px;
   font-size: 20px;
 }
+div.questions a.btn:hover{
+  background-color: #0069D9;
+  border-color: #0069D9;
+}
